5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4155/executions/1585_2905.log
== TEST (2019-03-26 10:31:23) 
-- CODE:
from math import *

lado1 = float(input("valor: "))
lado2 = float(input("valor: "))
lado3 = float(input("valor; "))
 
s = a + b + c / 2

A = sqrt(s(s - lado1) - (s - lado2) - (s - lado3))

r = round(A, 5)

print(r)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    s = a + b + c / 2
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:31:33) 
-- CODE:
from math import *

lado1 = float(input("valor: "))
lado2 = float(input("valor: "))
lado3 = float(input("valor; "))
 
s = a + b + c / 2

A = sqrt(s(s - lado1) - (s - lado2) - (s - lado3))

r = round(A, 5)

print(r)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    s = a + b + c / 2
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:31:59) 
-- CODE:
from math import *

lado1 = float(input("valor: "))
lado2 = float(input("valor: "))
lado3 = float(input("valor; "))
 
s = lado1 + lado2 + lado3 / 2

A = sqrt(s(s - lado1) - (s - lado2) - (s - lado3))

r = round(A, 5)

print(r)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    A = sqrt(s(s - lado1) - (s - lado2) - (s - lado3))
TypeError: 'float' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:32:28) 
-- CODE:
from math import *

lado1 = float(input("valor: "))
lado2 = float(input("valor: "))
lado3 = float(input("valor: "))
 
s = lado1 + lado2 + lado3 / 2

A = sqrt(s(s - lado1) - (s - lado2) - (s - lado3))

r = round(A, 5)

print(r)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    A = sqrt(s(s - lado1) - (s - lado2) - (s - lado3))
TypeError: 'float' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:32:37) 
-- CODE:
from math import *

lado1 = float(input("valor: "))
lado2 = float(input("valor: "))
lado3 = float(input("valor: "))
 
s = lado1 + lado2 + lado3 / 2

A = sqrt(s(s - lado1) - (s - lado2) - (s - lado3))

r = round(A, 5)

print(r)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    A = sqrt(s(s - lado1) - (s - lado2) - (s - lado3))
TypeError: 'float' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:32:48) 
-- CODE:
from math import *

lado1 = float(input("valor: "))
lado2 = float(input("valor: "))
lado3 = float(input("valor: "))
 
s = lado1 + lado2 + lado3 / 2

A = sqrt(s(s - lado1) - (s - lado2) - (s - lado3))

r = round(A, 5)

print(r)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    A = sqrt(s(s - lado1) - (s - lado2) - (s - lado3))
TypeError: 'float' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:33:16) 
-- CODE:
from math import *

lado1 = float(input("valor: "))
lado2 = float(input("valor: "))
lado3 = float(input("valor: "))
 
s = lado1 + lado2 + lado3 / 2

A = sqrt(s * (s - lado1) * (s - lado2) * (s - lado3))

r = round(A, 5)

print(r)
-- OUTPUT:
638.20837
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 10:33:23) 
-- CODE:
from math import *

lado1 = float(input("valor: "))
lado2 = float(input("valor: "))
lado3 = float(input("valor: "))
 
s = lado1 + lado2 + lado3 / 2

A = sqrt(s * (s - lado1) * (s - lado2) * (s - lado3))

r = round(A, 5)

print(r)
-- EXECUTION TIME:
0.176464
-- TEST CASE 1:
---- input:
11.0
19.5
13.2
---- correct output:
69.41967
---- user output:
638.20837
-- TEST CASE 2:
---- input:
30.0
40.0
50.0
---- correct output:
600.0
---- user output:
3909.36376
-- TEST CASE 3:
---- input:
33.0
43.0
55.0
---- correct output:
709.16654
---- user output:
4627.14693
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 10:33:48) 
-- CODE:
from math import *

lado1 = float(input("valor: "))
lado2 = float(input("valor: "))
lado3 = float(input("valor: "))
 
s = (lado1 + lado2 + lado3) / 2

A = sqrt(s * (s - lado1) * (s - lado2) * (s - lado3))

r = round(A, 5)

print(r)
-- EXECUTION TIME:
0.213571
-- TEST CASE 1:
---- input:
11.0
19.5
13.2
---- correct output:
69.41967
---- user output:
69.41967
-- TEST CASE 2:
---- input:
30.0
40.0
50.0
---- correct output:
600.0
---- user output:
600.0
-- TEST CASE 3:
---- input:
33.0
43.0
55.0
---- correct output:
709.16654
---- user output:
709.16654
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
